# plugin-exemplo

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  make.bat  mkdocs.yml  mtcli.ini-dist  pyproject.toml
docs/: contribuindo.md  index.md
plugin_exemplo/: cli.py  comando.py  conf.py  plugin.py
plugin_exemplo/commands/: comando.py
plugin_exemplo/models/: comando_model.py
