[project]
name = "plugin-exemplo"
version = "0.1.0"
description = "Plugin do mtcli"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mtcli>=1.18.1"
]

[project.entry-points."mtcli.plugins"]
plugin = "plugin_exemplo.plugin:plugin"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

